--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/dugiwarc/scaling-octo-chainsaw",
   "dependencies": {
     "@material-ui/core": "^4.1.1",
     "@types/jest": "24.0.15",
@@ -12,6 +13,7 @@
     "@types/react-sound": "^1.2.1",
     "@types/uuid": "^3.4.4",
     "axios": "^0.19.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -25,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
